No response type initial code
